# villa_task

./: .travis.yml  CMakeLists.txt  README.md  help_me_carry_poses.txt  package.xml  setup.py  tags
config/: groceries.rviz
launch/helpmecarry/: .helpmecarry_planb.launch.swo  helpmecarry_action.launch  helpmecarry_gpu.launch  helpmecarry_planb.launch  helpmecarry_robot.launch  helpmecarry_user.launch
launch/inspection/: inspection.launch
launch/stage1/: gpsr.launch  groceries.launch  groceries.launch.save  groceries_simulation.launch  octomap_only.launch  spr.launch  spr_exit.launch  stage1task2.launch  stage1task3.launch  stage1task5.launch
launch/stage1/share/: object_categories.xml
launch/startend/: startend.launch  test_startend.launch
scripts/: gpsr.py  groceries  helpmecarry  inspection  mock_wrist  null_task  sc_spr  set_initial_pose.sh  set_initial_pose_helpmecarry.sh  spr  start_end  task3.py  task4.py  task5.py
src/villa_task/: tts.py
src/villa_task/gpsr_navigation/: gpsr_navi_client.py  listener_gpsr_nav
src/villa_task/groceries/: collision_world_manager.py  detection_3d.py  exceptions.py  motion.py  objectlabel.py  octomap.py  perception.py  pick_and_place.py  reporting.py  tasktimer.py  transforms.py  visualization.py  world_model.py
src/villa_task/helpmecarry/: RecognitionManager.py  example_integration.py  face_recog_manager.py  following_srv_client.py  handover.py  handover_planb  headcontrol.py  human_following.py  listener.py  listener_planb  listener_planb.py  motion.py  navi_service_client.py  transforms.py  visualization.py  (+1 more)
(+18 files in other folders)
