<?xml version="1.0"?>
<package format="2">
  <name>villa_task</name>
  <version>0.0.0</version>
  <description>The villa_task package</description>

  <maintainer email="rishi@todo.todo">rishi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>villa_sound_localization</depend>
  <depend>villa_helpers</depend>
  <depend>villa_manipulation</depend>
  <depend>bwi_kr_execution</depend>
  <depend>std_msgs</depend>
  <depend>report_generation</depend>


</package>
